# merg

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: args.rs  user.rs
src/: lib.rs
src/merg/: Cargo.toml
src/merg/src/: lib.rs
src/merg/tests/: derive.rs
src/merg/tests/compile/: derive-enum.rs  derive-enum.stderr  derive-invalid-attribute.rs  derive-invalid-skip.rs  derive-invalid-strategy.rs  derive-missing-strategy.rs  derive-no-strategy.rs  derive-u8.rs  derive-u8.stderr
src/merg_derive/: Cargo.toml  README.md
src/merg_derive/src/: lib.rs
tests/: derive.rs  strategies.rs
tests/compile/: derive-invalid-default-strategy.rs  derive-u8.stderr
