# SPDX-FileCopyrightText: 2020 Robin Krahl <robin.krahl@ireas.org>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "merge"
version = "0.1.1"
authors = ["Robin Krahl <robin.krahl@ireas.org>", "Hans Larsen <hans@larsen.online>"]
edition = "2018"
description = "Merge multiple values into one"
homepage = "https://github.com/hansl/merge-rs"
repository = "https://github.com/hansl/merge-rs"
documentation = "https://docs.rs/merge-rs"
keywords = ["merge", "macros", "derive"]
categories = ["rust-patterns"]
license = "Apache-2.0 OR MIT"
exclude = [".builds/*"]
readme = "README.md"

[dependencies]
merge_derive = { path = "merge_derive", version = "0.1.0", optional = true }
num-traits = { version = "0.2.12", optional = true }

[dev-dependencies]
envy = "0.4"
toml = "0.5"
trybuild = "1.0"
structopt = "0.3"

[dev-dependencies.serde]
version = "1.0"
features = ["derive"]

[features]
default = ["derive", "num", "std"]
derive = ["merge_derive"]
num = ["num-traits"]
std = []

[workspace]
members = ["merge_derive"]
